styles.css
* {
    box-sizing: border-box;
    background-color: gray;
}

body {
    display: flex;
    justify-content: center;
}

.calculator-body,
.button-area {
    background-color: darkblue;
}

.calculator-body {
    margin-top: 10%;
    width: 25%;
    border: 2px solid black;
    padding: 10px;
    flex-shrink: 0;
}

.display-area {
    text-align: end;
    border: 2px solid black;
    margin-bottom: 10px;
    font-size: 2rem;
    padding-right: 5px;
    background-color: white;
}

button {
    width: 23%;
    height: 2rem;
    background-color: lightgoldenrodyellow;
    font-size: 100%;
    margin-top: 2%;
    flex-shrink: 0;
}

.display-area, 
button,
.calculator-body {
    border-radius: 20px;
}

.num-button, .decimal-button {
    background-color: lightblue;
}

.op-button, .equals-button {
    background-color: turquoise;
}

.zero-button {
    width: 48%;
}

.button-area {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2%;
}

